@@ -23,7 +23,7 @@ class Module:
             'MinPSVersion' : '2',
             
             'Comments': [
-                'https://github.com/Veil-Framework/PowerTools/tree/master/PowerView',
+                'https://github.com/PowerShellEmpire/PowerTools/tree/master/PowerView',
                 'https://github.com/mubix/netview'
             ]
         }
